# benchmarking

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
notebooks/: 010_torch_benchmark.ipynb
src/oc_benchmarking/: __init__.py
tests/: test_package.py
